<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.hzzt.powerful.vmodel.MainVm" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <com.hzzt.common.widget.head.HeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_connect_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:src="@drawable/icon_connect_suc" />

        <TextView
            android:id="@+id/tv_connect_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:includeFontPadding="false"
            android:text="@string/connect_suc"
            android:textColor="@color/white"
            android:textSize="@dimen/text20" />

        <LinearLayout
            android:id="@+id/layout_fail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_fail_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/text15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:lineSpacingExtra="@dimen/dp_5"
                android:text="@string/connect_fail_check"
                android:textColor="@color/main_color3"
                android:textSize="@dimen/text15" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_suc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_22"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/connect_country"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text15" />

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/server"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dp_6"
                    android:text="@string/connect_speed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text15" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_country_vpn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="United States"
                    android:textColor="@color/main_color3"
                    android:textSize="@dimen/text15" />

                <TextView
                    android:id="@+id/tv_vpn_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_country_vpn"
                    android:layout_marginTop="@dimen/dp_6"
                    android:text="0  Kb/S"
                    android:textColor="@color/main_color3"
                    android:textSize="@dimen/text15" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_server"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:onClick="onClickView"
            android:background="@drawable/bg_rect_main_25dp"
            android:gravity="center"
            android:text="@string/connect_select"
            android:textColor="@color/white"
            android:textSize="@dimen/text16" />
    </LinearLayout>
</layout>