<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/black1"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:src="@drawable/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_17"
        android:text="@string/app_name"
        android:textColor="@color/gray1"
        android:textSize="@dimen/text16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@color/gray2" />

    <RelativeLayout
        android:id="@+id/layout_faq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:onClick="onClickView"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_faq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/faq"
            android:layout_marginLeft="@dimen/dp_10"
            android:includeFontPadding="false"
            android:text="@string/menu_faq"
            android:textColor="@color/white"
            android:textSize="@dimen/text16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_gray_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_pp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:onClick="onClickView"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/pp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_privacy_policy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/pp"
            android:text="@string/menu_pp"
            android:includeFontPadding="false"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/white"
            android:textSize="@dimen/text16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_gray_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_au"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:onClick="onClickView"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/au"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_about_me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/au"
            android:layout_marginLeft="@dimen/dp_10"
            android:includeFontPadding="false"
            android:text="@string/menu_au"
            android:textColor="@color/white"
            android:textSize="@dimen/text16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_gray_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:onClick="onClickView"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/exit"
            android:includeFontPadding="false"
            android:text="@string/menu_exit"
            android:textColor="@color/white"
            android:textSize="@dimen/text16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_gray_next" />
    </RelativeLayout>
</LinearLayout>