<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <com.hzzt.common.widget.head.HeaderMainView
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_35"
        android:text="@string/home_remaining_time"
        android:textColor="@color/white"
        android:textSize="@dimen/text16" />

    <com.hzzt.common.widget.timer.CountDownView
        android:id="@+id/time_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        app:ctv_bg="@color/common_trans"
        app:ctv_interval_width="@dimen/dp_30"
        app:ctv_radius="@dimen/dp_5"
        app:ctv_text_color="@color/white"
        app:ctv_semicolon_color="@color/white"
        app:ctv_text_size="@dimen/text32"
        app:ctv_text_width="@dimen/dp_50"
        app:ctv_time="0" />

    <ImageView
        android:id="@+id/iv_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:src="@drawable/bg_circle_in_normal" />

    <RelativeLayout
        android:id="@+id/layout_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/bg_rect_black_8dp"
        android:onClick="onClickView">

        <ImageView
            android:id="@+id/iv_server_logo"
            android:layout_width="@dimen/dp_55"
            android:layout_height="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_toRightOf="@+id/iv_server_logo">

            <TextView
                android:id="@+id/tv_server_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_smart_server"
                android:textColor="@color/white"
                android:textSize="@dimen/text16" />

            <TextView
                android:id="@+id/tv_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_server_name"
                android:text="@string/home_connect"
                android:textColor="@color/main_color3"
                android:textSize="@dimen/text12" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@drawable/icon_white_next" />
    </RelativeLayout>
</LinearLayout>